Colaboratory を使用して作成しました

--- a/NLP100_00_09.ipynb
+++ b/NLP100_00_09.ipynb
@@ -6,16 +6,11 @@
       "provenance": [],
       "collapsed_sections": [
         "g2K4mr43pDt7",
-        "LSTd-YTzuLk3",
         "v_S_q0Twx1QR",
         "9eB6yD_72CTv",
-        "mSeHipxvqa8s",
-        "iVjJQQq3wndU",
-        "aznidKc0JiKG",
-        "CRpb_RS4OIkP",
-        "toD4HY-sQ1-d"
+        "mSeHipxvqa8s"
       ],
-      "authorship_tag": "ABX9TyOvPHpuwRjkEbMqawLJawVd",
+      "authorship_tag": "ABX9TyMbHIFYPbuqKaO2qmGebl1f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +29,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/GuraTom9/NLP_100/blob/main/NLP100_00_09.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/GuraTom9/NLP100/blob/main/NLP100_00_09.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -96,7 +91,7 @@
       "source": [
         "org_str = \"パタトクカシーー\"\n",
         "\n",
-        "new_str = org_str[1::2] #1文字目の次から、2文字ごとに取り出す\n",
+        "new_str = org_str[::2] #1文字目の次から、2文字ごとに取り出す\n",
         "print(new_str)"
       ],
       "metadata": {
@@ -104,15 +99,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wwfH9G_HuUFm",
-        "outputId": "39fed1e7-fab4-4e4d-b759-1d2fe580c386"
+        "outputId": "9906cbfe-3ec6-46a7-fb3a-43d7b3ab6e82"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "タクシー\n"
+            "パトカー\n"
           ]
         }
       ]
@@ -257,43 +252,40 @@
       "source": [
         "import re\n",
         "\n",
-        "def ngram(type, n, sentence):\n",
-        "    # 単語n-gram\n",
-        "    if type == \"word\":\n",
+        "def create_ngram(n, sentence):\n",
+        "    crean_sentence = re.sub(\"[,\\.]\", \"\", sentence)\n",
+        "\n",
+        "    # 単語n-gram作成\n",
+        "    str = \"\"\n",
+        "    word_ngram = []\n",
+        "    words = crean_sentence.split()\n",
+        "    for i in range(len(words)-n+1):\n",
+        "        for j in range(n):\n",
+        "            if j == 0:\n",
+        "                str += words[i]\n",
+        "            else:\n",
+        "                str += \" \" + words[j+i]\n",
+        "        word_ngram.insert(i, str)\n",
         "        str = \"\"\n",
-        "        ngram_word = []\n",
-        "        words = re.sub(\"[,\\.]\", \"\", sentence).split()\n",
-        "        for i in range(len(words)-n+1):\n",
-        "            for j in range(n):\n",
-        "                if j == 0:\n",
-        "                    str += words[j+i]\n",
-        "                else:\n",
-        "                    str += \" \" + words[j+i]\n",
-        "            ngram_word.insert(i, str)\n",
-        "            str = \"\"\n",
         "\n",
-        "        return ngram_word\n",
-        "    \n",
-        "    # 文字n-gram\n",
-        "    elif type == \"char\":\n",
-        "        ngram_char = []\n",
-        "        words = re.sub(\"[,\\.\\t]\", \"\", sentence)\n",
-        "        for k in range(len(words)-n+1):\n",
-        "            ngram_char.insert(k, words[k:k+n])\n",
+        "    # 文字n-gram作成\n",
+        "    char_ngram = []\n",
+        "    for k in range(len(crean_sentence)-n+1):\n",
+        "        char_ngram.insert(k, crean_sentence[k:k+n])\n",
         "            \n",
-        "        return ngram_char\n",
+        "    return word_ngram, char_ngram\n",
         "\n",
-        "print(ngram(\"word\", 2, \"I am an NLPer\"))            \n",
-        "print(ngram(\"char\", 2, \"I am an NLPer\"))            "
+        "print(create_ngram(2, \"I am an NLPer\")[0])            \n",
+        "print(create_ngram(2, \"I am an NLPer\")[1])            "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "fBtNBoBIwHbJ",
-        "outputId": "3bee8114-3ec4-4627-cd79-74305186178d"
+        "id": "GbpJfWZjBXMA",
+        "outputId": "4a5ad14f-6628-4615-c152-6e95eac01bc9"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,8 +309,8 @@
     {
       "cell_type": "code",
       "source": [
-        "X = set(ngram(\"char\", 2, \"paraparaparadise\"))\n",
-        "Y = set(ngram(\"char\", 2, \"paragraph\"))\n",
+        "X = set(create_ngram(2, \"paraparaparadise\")[1])\n",
+        "Y = set(create_ngram(2, \"paragraph\")[1])\n",
         "\n",
         "print(\"X：\", X)\n",
         "print(\"Y：\", Y)\n",
@@ -335,19 +327,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XWN1SrHzJJl1",
-        "outputId": "a64e19b4-f179-4598-e84d-cc6e7721f099"
+        "outputId": "326eaf63-a6ad-4bf1-cd5d-f61ee25561e7"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "X： {'ap', 'ar', 'se', 'is', 'pa', 'ra', 'ad', 'di'}\n",
-            "Y： {'ap', 'gr', 'ag', 'ar', 'ph', 'pa', 'ra'}\n",
-            "union： {'ap', 'gr', 'ag', 'ar', 'se', 'is', 'ph', 'pa', 'ra', 'ad', 'di'}\n",
-            "intersection： {'ra', 'pa', 'ap', 'ar'}\n",
-            "difference： {'is', 'di', 'ad', 'se'}\n",
+            "X： {'ad', 'ap', 'ra', 'ar', 'di', 'pa', 'se', 'is'}\n",
+            "Y： {'ag', 'ap', 'ra', 'gr', 'ar', 'ph', 'pa'}\n",
+            "union： {'ag', 'ad', 'ap', 'ra', 'gr', 'ar', 'ph', 'di', 'pa', 'se', 'is'}\n",
+            "intersection： {'ar', 'ap', 'ra', 'pa'}\n",
+            "difference： {'ad', 'di', 'se', 'is'}\n",
             "’se’がXに含まれるか： True\n",
             "’se’がYに含まれるか： False\n"
           ]
@@ -411,16 +403,16 @@
         "def cipher(text):\n",
         "    str = \"\"\n",
         "    for i in range(len(text)):\n",
-        "        if text[i].islower():\n",
+        "        if text[i].islower():   #英小文字ならば(219 - 文字コード)の文字に置換\n",
         "            str += chr(219 - ord(text[i]))\n",
-        "        else:\n",
+        "        else:   #その他の文字はそのまま出力\n",
         "            str += text[i]\n",
         "    return str\n",
         "\n",
         "plain_text = \"I am an NLPer\"\n",
-        "secret_text = cipher(plain_text)\n",
+        "secret_text = cipher(plain_text)    #暗号化\n",
         "print(secret_text)\n",
-        "plain_text = cipher(secret_text)\n",
+        "plain_text = cipher(secret_text)    #複号化\n",
         "print(plain_text)"
       ],
       "metadata": {
@@ -461,12 +453,12 @@
         "    shuffle_words = ''\n",
         "    for word in words:\n",
         "        if len(word) > 4:\n",
-        "            h = word[0]\n",
-        "            e = word[-1]\n",
-        "            word = word.lstrip(word[0])\n",
-        "            word = word[:-1]\n",
+        "            head = word[0]\n",
+        "            tail = word[-1]\n",
+        "            word = word[1:]     #先頭文字削除\n",
+        "            word = word[:-1]    #末尾文字削除\n",
         "            shuffle = ''.join(random.sample(word, len(word)))\n",
-        "            shuffle_words += (h + shuffle + e).ljust(len(h + shuffle + e) + 1)\n",
+        "            shuffle_words += (head + shuffle + tail).ljust(len(head + shuffle + tail) + 1)  #ljust()は、呼び出した文字列の末尾に空白を追加した文字列を返す\n",
         "        else:\n",
         "            shuffle_words += word.ljust(len(word) + 1)\n",
         "    return shuffle_words\n",
@@ -479,15 +471,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a61e5438-ace6-44b9-b188-c92b85dda9fd"
+        "outputId": "a14f3919-3e77-4852-d1c2-eaaeb4f85186"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "I cu’nlodt believe that I cuold aclaluty uatennrsdd what I was ridaneg : the phmanneeol peowr of the hamun mind . \n"
+            "I culd’not bleivee that I cloud aautlcly uatserndnd what I was rienadg : the pnemanhoel power of the hmuan mind . \n"
           ]
         }
       ]
