Colaboratory を使用して作成しました

--- a/NLP100_00_09.ipynb
+++ b/NLP100_00_09.ipynb
@@ -10,7 +10,7 @@
         "9eB6yD_72CTv",
         "mSeHipxvqa8s"
       ],
-      "authorship_tag": "ABX9TyMbHIFYPbuqKaO2qmGebl1f",
+      "authorship_tag": "ABX9TyPbB81NAZcGjloFbXIdX0Tc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -420,9 +420,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9892edb9-b553-42fe-cd84-a3a640e659ee"
+        "outputId": "456a2541-7beb-4f84-faf5-99f88439887f"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,8 +455,7 @@
         "        if len(word) > 4:\n",
         "            head = word[0]\n",
         "            tail = word[-1]\n",
-        "            word = word[1:]     #先頭文字削除\n",
-        "            word = word[:-1]    #末尾文字削除\n",
+        "            word = word[1:-1]\n",
         "            shuffle = ''.join(random.sample(word, len(word)))\n",
         "            shuffle_words += (head + shuffle + tail).ljust(len(head + shuffle + tail) + 1)  #ljust()は、呼び出した文字列の末尾に空白を追加した文字列を返す\n",
         "        else:\n",
@@ -464,6 +463,7 @@
         "    return shuffle_words\n",
         "\n",
         "text = \"I couldn’t believe that I could actually understand what I was reading : the phenomenal power of the human mind .\"\n",
+        "print(text)\n",
         "print(typoglycemia(text))"
       ],
       "metadata": {
@@ -471,15 +471,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a14f3919-3e77-4852-d1c2-eaaeb4f85186"
+        "outputId": "fb6ad830-e4db-414f-9bdc-95405f49573e"
       },
-      "execution_count": 31,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "I culd’not bleivee that I cloud aautlcly uatserndnd what I was rienadg : the pnemanhoel power of the hmuan mind . \n"
+            "I couldn’t believe that I could actually understand what I was reading : the phenomenal power of the human mind .\n",
+            "I culdno’t bveilee that I cluod altlcuay unrseadtnd what I was raenidg : the pheonnamel pweor of the hmaun mind . \n"
           ]
         }
       ]
